cmake_minimum_required(VERSION 3.21)
project(project1_315)

set(CMAKE_CXX_STANDARD 14)

add_executable(project1_315 main.cpp User.cpp User.hpp SocialNetwork.cpp SocialNetwork.hpp JSONTokenizer.cpp JSONTokenizer.hpp JSONToken.hpp JSONParser.cpp JSONParser.hpp JSONPair.cpp JSONPair.hpp JSONEntity.cpp JSONEntity.hpp JSONObject.cpp JSONObject.hpp JSONEntitySet.cpp JSONEntitySet.hpp)
